--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -1,12 +1,20 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d4554e2a-372e-421a-a5c7-9ab8536e864c",
+   "cell_type": "markdown",
+   "id": "a8265268-c423-4aa9-a829-31d44ac8296c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Evaluation G-EOT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd042bcd-1e7a-42c6-9c6d-00f087e71dba",
+   "metadata": {},
+   "source": [
+    "This notebook is used to evaluate the performance of the G-EOT model for black-box adversarial attacks for 3D objects. At the end of this notebook you can see the history of the loss and TFR of the model during training."
+   ]
   },
   {
    "cell_type": "code",
